--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="images/header/logo-master.png" type="image/x-icon">
-    <script src="../javascript/script.js"></script>
+    <script src="javascript/script.js"></script>
     <title>Master</title>
 </head>
 <body>
