--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="product__container">
                     <div class="product__row">
                         <h1 class="product__title">É mais do que trabalho. É uma forma de trabalhar em equipe</h1>
-                        <p class="product__description">Comece com um quadro, listas e cartões do Trello. Personalize e expanda com mais recursos à medida que seu trabalho em equipe aumentar. Gerencie projetos, organize tarefas e cultive o espírito de equipe, tudo em um só lugar.</p>
+                        <p class="product__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas dolor mollitia sed totam maiores ad consequuntur laboriosam voluptatem hic, vel sit similique, cupiditate aliquid magnam accusamus inventore in eius perspiciatis?</p>
                         <a href="#" class="product__link">Comece a fazer &#8594;</a>
                     </div>
                     <div class="product__container">
@@ -54,7 +54,7 @@
                     <div class="features__row">
                         <div class="features__item">
                             <h2 class="features__title">Recursos para ajudar seu time a ter sucesso</h2>
-                            <p class="features__description">Um time produtivo precisa de uma ferramenta avançada (e de muitos lanches, é claro). Desde reuniões e projetos até eventos e definição de metas, os recursos intuitivos do Trello possibilitam que qualquer time configure e personalize rapidamente os fluxos de trabalho de praticamente qualquer atividade.</p>
+                            <p class="features__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt, exercitationem? Inventore fugit doloribus ipsum tempore ipsa iste, repellat rem esse perferendis quibusdam sequi eligendi debitis magni cumque nisi illum cum?</p>
                         </div>
                     </div>
     
@@ -62,8 +62,8 @@
                         <img src="https://i.pinimg.com/originals/6f/16/e3/6f16e3877198684968c7cfc3586e7d30.png" alt="ilustração 2" class="features__img">
                         <div class="features__item">
                             <h5 class="features__subtitle">Escolha uma visualização</h5>
-                            <h2 class="features__title">O quadro é apenas o começo</h2>
-                            <p class="features__description">As listas e os cartões são os elementos essenciais para a organização do trabalho em um quadro do Master. Vá além com atribuições de tarefas, cronogramas, métricas de produtividade, calendários e muito mais.</p>
+                            <h2 class="features__title">Isso é apenas o começo</h2>
+                            <p class="features__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic soluta est laboriosam eligendi. Architecto blanditiis accusantium vero laborum molestiae tempore! Dolorem aut eligendi suscipit, ipsum eius reiciendis quia aspernatur recusandae.</p>
                             <a href="#" class="features__link"><h3>+ Saiba Mais</h3></a>
                         </div>
                     </div>
@@ -71,17 +71,17 @@
                         <img src="https://i.pinimg.com/originals/38/cd/f6/38cdf625f26264d3fb7c92d031f23169.png" alt="ilustração" class="features__img">
                         <div class="features__item">
                             <h5 class="features__subtitle">Aprofunde-se nos detalhes</h5>
-                            <h2 class="features__title">Os cartões contém tudo que você precisa</h2>
-                            <p class="features__description">Os cartões do Master são seu portal para um trabalho mais organizado, onde cada parte da sua tarefa pode ser gerenciada, acompanhada e compartilhada com seus colegas de time. Abra qualquer cartão para acessar um ecossistema de checklists, datas de entrega, anexos, conversas e muito mais.</p>
+                            <h2 class="features__title">O master contém tudo que você precisa</h2>
+                            <p class="features__description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam libero, veniam ipsam sequi quo ad eaque saepe! Exercitationem accusamus asperiores voluptatum quibusdam odit aspernatur, aliquid, inventore dolore eaque non at.</p>
                             <a href="#" class="features__link"><h3>+ Saiba Mais</h3></a>
                         </div>
                     </div>
                     <div class="features__row">
                         <img src="https://www.jing.fm/clipimg/full/179-1793277_previous-work-illustration.png" alt="ilustração" class="features__img">
                         <div class="features__item">
-                            <h5 class="features__subtitle">Conheça seu novo Butler</h5>
+                            <h5 class="features__subtitle">Conheça seu novo feature</h5>
                             <h2 class="features__title">Automação sem código</h2>
-                            <p class="features__description">Deixe os robôs fazerem todo o trabalho para que seu time possa se concentrar nas tarefas que importam. Com o Butler, a automação integrada do Trello, reduza o número de tarefas monótonas (e cliques) no quadro do seu projeto aproveitando o poder da automação em todo o seu time.</p>
+                            <p class="features__description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam quos atque eligendi quam blanditiis tenetur ipsum iste, facilis cum eos illum quaerat odio dolorum et error ad corrupti dolorem non.</p>
                             <a href="#" class="features__link"><h3>+ Saiba Mais</h3></a>
                         </div>
                     </div>
@@ -90,7 +90,7 @@
                         <div class="features__item">
                             <h5 class="features__subtitle">Power Ups</h5>
                             <h2 class="features__title">Integre as melhores ferramentas de trabalho</h2>
-                            <p class="features__description">Deixe os robôs fazerem todo o trabalho para que seu time possa se concentrar nas tarefas que importam. Com o Butler, a automação integrada do Trello, reduza o número de tarefas monótonas (e cliques) no quadro do seu projeto aproveitando o poder da automação em todo o seu time.</p>
+                            <p class="features__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde saepe maxime numquam ipsa voluptas aut atque tempora corrupti. Enim vitae quasi odit neque doloribus aperiam consequatur reiciendis ipsa modi aliquid!</p>
                             <a href="#" class="features__link"><h3>+ Saiba Mais</h3></a>
                         </div>
                     </div>
